--- a/themes/headlight/css/style.css
+++ b/themes/headlight/css/style.css
@@ -15,6 +15,9 @@ ol, ul {
 
 html, body {
     height: 100%;
+    width: auto;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 /* Placement */
@@ -22,7 +25,7 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    background-color: pink;
+    background-color: lightgrey;
 }
 
 .main {
@@ -45,6 +48,12 @@ body {
 .title, .logo {
     padding: 3em 3em 3em 0;
 }
+@media (max-width: 810px) {
+    html, body {
+        max-width: 90%;
+    }
+}
+
 
 @media (max-width: 767px) {
     .title, .logo {
@@ -91,9 +100,9 @@ body {
 }
 
 p, td, th, li, dd {
-    text-align: justify;
     overflow-wrap: break-word;
     word-wrap: break-word;
+    margin-bottom: 1em;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -144,4 +153,13 @@ blockquote {
     margin-left: 1em;
     padding-left: 1em;
     border-left: 0.5em solid #f5f5f5;
+}
+
+.chris {
+    border-radius: 20%;
+    max-width: 30%;
+}
+
+.footer-bottom {
+    margin-bottom: 3em;
 }
