--- a/themes/headlight/incl/footer.twig
+++ b/themes/headlight/incl/footer.twig
@@ -1,7 +1,7 @@
 <div class="footer">
-    <div>
+    <div class="footer-bottom">
         <p>
-            En footer med lite text.
+            Copyright © Christoffer Carlsson HT2024
         </p>
     </div>
     <div class="social">
