Update styling to final kmom02 version

--- a/themes/kmom02/scss/container.scss
+++ b/themes/kmom02/scss/container.scss
@@ -6,18 +6,14 @@
   box-sizing: border-box;
 }
 
-* {
-  color: $font-color;
-}
-
 html, body {
   height: 100%;
 }
 
 body {
   background-color: $background-color;
+  color: #fff;
 }
-
 
 .main {
   flex: 1 0 auto;
