--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6431,16 +6431,13 @@ template {
   box-sizing: border-box;
 }
 
-* {
-  color: #fff;
-}
-
 html, body {
   height: 100%;
 }
 
 body {
   background-color: #254966;
+  color: #fff;
 }
 
 .main {
@@ -6546,7 +6543,6 @@ h1, h2, h3, p, ul {
   max-width: 300px;
   height: auto;
   margin-bottom: 2rem;
-  margin-top: -5rem;
 }
 
 @media (max-width: 768px) {
@@ -6564,6 +6560,8 @@ h1, h2, h3, p, ul {
   }
 }
 .footer {
+  max-width: 105rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
   padding: 2rem;
@@ -6577,6 +6575,8 @@ h1, h2, h3, p, ul {
 }
 
 .header {
+  max-width: 105rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
   padding: 2rem;
@@ -6591,12 +6591,62 @@ h1, h2, h3, p, ul {
   align-items: center;
 }
 
-.nav a {
-  font-size: 2.5rem;
+.nav a, .title a {
   text-decoration: none;
   color: #fff;
 }
 
-.nav a:hover {
+.nav a {
+  font-size: 2.5rem;
+}
+
+.nav a:hover, .title h1:hover {
   color: #809CBB;
+}
+
+.color-palette {
+  display: flex;
+  flex-direction: row; /* Align items side by side */
+  margin: 20px 0;
+  justify-content: center; /* Center the palette */
+  align-items: center;
+  border: 1px solid #ccc;
+}
+
+.color {
+  flex: 1;
+  height: 30rem; /* Ensure height matches the look */
+  display: flex;
+  flex-direction: column; /* Align text and color box vertically */
+  justify-content: flex-end;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
+.white-color {
+  background-color: #fff;
+  color: #000;
+}
+
+.black-color {
+  background-color: #000;
+}
+
+.background-color {
+  background-color: #254966;
+}
+
+.alt-background-color {
+  background-color: #C1C7D4;
+  color: #000;
+}
+
+.darker-color {
+  background-color: #111010;
+}
+
+.lighter-color {
+  background-color: #809CBB;
+  color: #000;
 }
