--- a/themes/kmom02/scss/header.scss
+++ b/themes/kmom02/scss/header.scss
@@ -1,10 +1,11 @@
 .header {
+  max-width: 105rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
   padding: 2rem;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .side-header {
@@ -14,11 +15,15 @@
   align-items: center;
 }
 
-.nav a {
-  font-size: 2.5rem;
+.nav a, .title a {
   text-decoration: none;
   color: $font-color;
 }
-.nav a:hover {
+
+.nav a {
+  font-size: 2.5rem;
+}
+
+.nav a:hover, .title h1:hover {
   color: $lighter-color;
 }
