--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -17,7 +17,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'main';
 @import 'footer';
 @import 'header';
-
+@import 'about';
 
 
 
